Added TypeWriter animation to header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="wrapper">
 
-        <h2>About Me</h2>
+        <!-- <h2>About Me</h2> -->
 
         <div class="aboutContainer">
 
@@ -303,7 +303,7 @@
             <button type="submit" value="Send">Send</button>
           </form>
   
-        </div>
+        </>
 
       </div>
     </section>
