--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <nav>
       <ul>
         <li><a class="mobileNav" href="#"><i class="fas fa-bars"></i></a></li>
-        <li><a class="toggleDropDown mobileDropDown" href="#about">About Me</a></li>
-        <li><a class="toggleDropDown mobileDropDown" href="#projects">My Work</a></li>
-        <li><a class="toggleDropDown mobileDropDown" href="#toolkit">Skills</a></li>
-        <li><a class="toggleDropDown mobileDropDown" class="contactLink" href="#contact">Contact</a></li>
+        <li><a class="item mobileDropDown" href="#about">About Me</a></li>
+        <li><a class="item mobileDropDown" href="#projects">My Work</a></li>
+        <li><a class="item mobileDropDown" href="#toolkit">Skills</a></li>
+        <li><a class="item mobileDropDown" class="contactLink" href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -105,8 +105,8 @@
 
               <div class="projectInfo">
                 <h4>Hush Note</h4>
-                <p>A React app inspired by Whisper that stores anonymous confessions, utilizing Firebase to be accessed by all users.</p>
-                <p>React, Firebase, JavaScript</p>
+                <p>Have a confession that you need to get off your chest? Try this React app and put it out into the world.</p>
+                <p>React, Firebase, JavaScript, CSS</p>
                 <a target="_blank" href="https://github.com/davidallenjordan/hushNote" >View Repo</a>
                 <a target="_blank" href="https://davidallenjordan.github.io/hushNote/" >View Live</a>
               </div>
@@ -123,8 +123,8 @@
 
               <div class="projectInfo">
                 <h4>Element Quiz</h4>
-                <p>Find out what classical element you are most swayed by with this JavaScript logic based app that uses the Sass preprocessor.</p>
-                <p>JavaScript, Sass</p>
+                <p>Are you an emotional, empathic being or do you find yourself more fiery and assertive? Take this quiz to see which of the four classical elements you are connected to.</p>
+                <p>JavaScript, jQuery, Sass, CSS</p>
                 <a target="_blank" href="https://github.com/davidallenjordan/elementQuiz" >View Repo</a>
                 <a target="_blank" href="https://davidallenjordan.github.io/elementQuiz/" >View Live</a>
               </div>
@@ -141,8 +141,8 @@
 
               <div class="projectInfo">
                 <h4>PlantList</h4>
-                <p>A paired-programming site that pulls from an API to display plants and their information. Styles are organized with Sass.</p>
-                <p>Rest API, Sass, JavaScript</p>
+                <p>Whether you're Planting a garden or studying for that horticulture exam, this app can help you find the plants you need!</p>
+                <p>Rest API, Pair-Programming, JavaScript, Sass, CSS</p>
                 <a target="_blank" href="https://github.com/davidallenjordan/plantList" >View Repo</a>
                 <a target="_blank" href="https://davidallenjordan.github.io/plantList/" >View Live</a>
               </div>
@@ -159,8 +159,8 @@
 
               <div class="projectInfo">
                 <h4>Sanctuary Helpers</h4>
-                <p>A multi-page interior decorating site following a PSD and styleguide precisely.</p>
-                <p>PSD Conversion, Multi-page, Sass</p>
+                <p>Is it an interior design or furniture blog? All I know is this accessible site was created with semantic HTML using a PhotoShop image as reference.</p>
+                <p>PSD Conversion, Multi-page, Sass, CSS</p>
                 <a target="_blank" href="https://github.com/davidallenjordan/SanctuaryHelpers" >View Repo</a>
                 <a target="_blank" href="https://davidallenjordan.github.io/SanctuaryHelpers/" >View Live</a>
               </div>
@@ -259,31 +259,30 @@
 
           <ul class="connections">
 
-            <div class="connectionsContainer">
-              <li class="contactBox">
-                <a href="mailto:davidallenjordan@gmail.com">
-                  <p>Email Me</p>
-                  <i class="fas fa-envelope"></i>
-                </a>
-              </li>
+            <li class="contactBox">
+              <a href="mailto:davidallenjordan@gmail.com">
+                <p>Email Me</p>
+                <i class="fas fa-envelope"></i>
+              </a>
+            </li>
     
-              <li class="contactBox">
-                <a target="_blank" href="https://calendly.com/davidallenjordan/30min">
-                  <p>Book a Chat</p>
-                  <i class="fas fa-calendar-alt"></i>
-                </a>
-              </li>
-            </div>  
+            <li class="contactBox">
+              <a target="_blank" href="https://calendly.com/davidallenjordan/30min">
+                <p>Book a Chat</p>
+                <i class="fas fa-calendar-alt"></i>
+              </a>
+            </li>
 
             <li class="follow">
-              <p>Follow</p>
-  
-                <ul class="socials">
-                  <li><a target="_blank" aria-label="LinkedIn" href="https://www.linkedin.com/in/david-allen-jordan-3475151b1/"><i class="fab fa-linkedin-in"></i></a></li>
-                  <li><a target="_blank" aria-label="GitHub" href="https://github.com/davidallenjordan"><i class="fab fa-github"></i></a></li>
-                  <li><a target="_blank" aria-label="Twitter" href="https://twitter.com/davidaj416"><i class="fab fa-twitter"></i></a></li>
-                </ul>
+              
+              <ul class="socials">
+                <p>Follow</p>
+                <li><a target="_blank" aria-label="LinkedIn" href="https://www.linkedin.com/in/david-allen-jordan-3475151b1/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a target="_blank" aria-label="GitHub" href="https://github.com/davidallenjordan"><i class="fab fa-github"></i></a></li>
+                <li><a target="_blank" aria-label="Twitter" href="https://twitter.com/davidaj416"><i class="fab fa-twitter"></i></a></li>
+              </ul>
             </li>
+
           </ul>
   
           <!-- Email form -->
@@ -303,17 +302,17 @@
             <button type="submit" value="Send">Send</button>
           </form>
   
-        </>
+        </div>
 
       </div>
     </section>
 
   </main>
 
-  <!-- Copyright for me, because I designed and built this!  -->
+  <!-- Designed and built by David Allen-Jordan  -->
 
   <footer>
-    <p>Copyright <i class="far fa-copyright"></i> David Allen-Jordan 2020</p>
+    <p>Copyright <i class="far fa-copyright"></i> <span class="avoidWrap">David Allen-Jordan</span> 2020</p>
   </footer>
 
 <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
