added updated resume

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <p>Take a look around and let's get to know each other!</p>
                                                 
-            <a target="_blank" tabindex="0" href="david-allen-jordan-portfolio-version-resume.pdf" >Download Resume</a>
+            <a target="_blank" tabindex="0" href="davidallenjordan.com-resume.pdf" >Download Resume</a>
           </div> 
           
         </div>  
